<resources>
    <string name="app_name">Image Converter</string>

    <string name="item_size" translatable="false">Image Count: %1$d/%2$d</string>
    <string name="stopText">Stop</string>
    <string name="restartText">Restart</string>
    <string name="appPremiumSku" translatable="false">image_converter_premium</string>

    <string name="base64Key" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEA20NTZ9NcUHauNHTsgVRAfed6i1aOwAIndn600Gh4aEgsQnK7gdIjIk+Vdv6cjrePG+FkU55y2Re4MRHE1cROmLnZjvmfFkWMEFn9FslKX99uh6YmZ29Cg2KFJuNJe0mGEOH+ULMXwviGSRtsWg5AGLjTSbRCiabva5g7u7PxHkt4vtiQt+BWz6ecndOP6zKiDnZ+PkZT1L9bnWbbHcZzDpGTzEiD6d+Gn2fU1yPpf+uxLoa9fRTqa9SqspbaD3kjLdnH17/6aJXIyeZYSF8TAqjLeA9BiU5Z8K2JimC8m/RngvsZEVMtC5gq+a1styWWdgv4oJOwalPlA3RiZz01yQIDAQAB</string>
    <string name="defaultQuality" translatable="false">72 PPI</string>
    <string name="convertButtonText">Convert</string>
    <string name="pdfQualityText">PDF Quality :</string>
    <string name="qualityText">Quality</string>
    <string name="convertAllCheckBoxText" translatable="false">Convert All Into :</string>
    <string name="renameEditTextHint">Filename</string>
    <string name="gridConvertedFileItemImageViewDescription" translatable="false">Converted file Item Grid</string>
    <string name="convertedFileListViewImageDescription" translatable="false">Converted file Item List View</string>
    <string name="pauseButtonText">Pause</string>
    <string name="backHomeButtonText">View Files</string>
    <string name="resumeButtonText">Resume</string>
    <string name="no_favourite_file_image_view" translatable="false">No favourite file Image View</string>
    <string name="no_favorite_files_available">No Favorite Files Available</string>
    <string name="no_converted_files_available">No Converted Files Found</string>
    <string name="arrow_right_image_view" translatable="false">Arrow Right Image View</string>
    <string name="queue_item_image_preview" translatable="false">Queue Item Image Preview</string>
    <string name="renameDialogEditTextHint">filename</string>
    <string name="renameDialogButtonText">Rename</string>
    <string name="renameDialogCancelButtonText">Cancel</string>
    <string name="current_pdf_page" translatable="false">Current PDF Page</string>
    <string name="delete_file_txt">Delete File</string>
    <string name="share_file_button">Share file</string>
    <string name="edit_file_button">Edit File</string>
    <string name="favorite_button">Move to favourite</string>
    <string name="open_in_another_pdf_viewing_app_button">Open In another PDF viewing app button</string>
    <string name="opened_image_file">Opened Image File</string>
    <string name="appInterstitialAdId" translatable="false">ca-app-pub-3061451454890036/6254824452</string>
    <string name="appBannerAdId" translatable="false">ca-app-pub-3061451454890036/1194069467</string>
    <string name="appBigBannerAdId" translatable="false">ca-app-pub-3061451454890036/8404568310</string>
    <string name="moveFileText">Move</string>
    <string name="copyTextView">Copy</string>
    <string name="shareText">Share</string>
    <string name="fileDetailsText">Details</string>
    <string name="fileDeleteText">Delete</string>
    <string name="file_details_image_button">File Details Image Button</string>
    <string name="file_copy_image_view">File Copy Image View</string>
    <string name="file_move_image_view">File Move Image View</string>
    <string name="move_to_folder_text">Move to folder</string>
    <string name="rename_dialog_text">New-Filename</string>
    <string name="moveCopyCancel">Cancel</string>
    <string name="moveCopyAction">Move Here</string>
    <string name="new_folder_text">New-Folder</string>
    <string name="delete_all_text">Delete All Files</string>
    <string name="grid_view_text" translatable="false">Grid View</string>
    <string name="copy_here_text">Copy Here</string>
    <string name="move_here_text">Move Here</string>
    <string name="path_title_text">Path</string>
    <string name="contains_title_text">Contains</string>
    <string name="last_modified_title_text">Last modified</string>
    <string name="size_title_text">Size</string>
    <string name="name_title_text">Name</string>
    <string name="details_card_title">Details</string>
    <string name="details_card_ok_btn">OK</string>
    <string name="clear_folder_text">Clear Folder</string>
    <string name="progressbar_view_text">Action In Progress</string>
    <string name="edit_btn_text">Edit</string>
    <string name="app_banner_ad" translatable="false">App Banner Ad</string>
    <string name="favourite_items_list">Favourite items list</string>
    <string name="my_converted_files_list">My converted files list</string>
    <string name="my_converted_files_in_a_directory">My converted files in a directory</string>
    <string name="quality_value_for_images">Quality Value for images</string>
    <string name="pdf_into_png">PDF Into PNG</string>
    <string name="pdf_into_webp">PDF Into WEBP</string>
    <string name="pdf_into_jpg">PDF Into JPG</string>
    <string name="merge_pdf_files_into_one_pdf">Merge PDF Files</string>
    <string name="convert_images_to_png">Convert Images to PNG</string>
    <string name="png_image" translatable="false">Png Image</string>
    <string name="images_into_png">Images Into PNG</string>
    <string name="jpg_image" translatable="false">Jpg Image</string>
    <string name="images_into_jpg">Images Into JPG</string>
    <string name="convert_images_into_jpg">Convert Images into JPG</string>
    <string name="convert_images_into_webp">Convert Images into Webp</string>
    <string name="webp_image" translatable="false">Webp Image</string>
    <string name="images_into_webp">Images Into WEBP</string>
    <string name="pdf_image" translatable="false">Pdf Image</string>
    <string name="merge_images_into_single_pdf">Images Into PDF</string>
    <string name="merge_images_into_pdf_file">Merge Images into PDF</string>
    <string name="convert_image_into_a_pdf_file">Convert Image into a pdf File</string>
    <string name="image_into_pdf">Image Into PDF</string>
    <string name="convert_pdf_into_png_files">Images Into PDF</string>
    <string name="merge_two_pdf_files_into_one">Merge PDF Files</string>
    <string name="convert_pdf_into_webp_images">Convert Pdf into webp images</string>
    <string name="convert_pdf_into_jpg_images">Convert Pdf into Jpg images</string>
    <string name="pdf_preview_page" translatable="false">Pdf Preview Page</string>
    <string name="version">Version - 17.6 V</string>
    <string name="_50" translatable="false">50</string>
    <string name="padding_pdf_page">Page Padding:</string>
    <string name="value_0" translatable="false">0</string>
    <string name="value_1000" translatable="false">1000</string>
    <string name="pdf_quality_text">Page Quality:</string>
    <string name="img_quality_text">Size:</string>
    <string name="file_quality">File Quality</string>
    <string name="default_format">Default format :</string>
    <string name="_100" translatable="false">100</string>
    <string name="quality">Quality</string>
    <string name="save_directory">Save directory</string>
    <string name="rate_our_app">Rate our app</string>
    <string name="go_premium">Go premium</string>
    <string name="send_a_bug_report">Send a bug report</string>
    <string name="files">Files</string>
    <string name="menu">Menu</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="sort">Sort</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="name">Name</string>
    <string name="type_created_at">Type-Created At</string>
    <string name="filter">Filter</string>
    <string name="next">Next</string>
    <string name="document_path" translatable="false">Documents/Image Converter</string>
    <string name="image_path" translatable="false">Pictures/Image Converter</string>

    <string-array name="file_types">
        <item>PNG</item>
        <item>JPG</item>
        <item>JPEG</item>
        <item>WEBP</item>
        <item>PDF</item>
    </string-array>

    <string-array name="imgSize">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>

    <string-array name="pdfPageSize">
        <item>A0</item>
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
    </string-array>

    <string-array name="file_types_all">
        <item>PNG</item>
        <item>JPG</item>
        <item>JPEG</item>
        <item>WEBP</item>
        <item>PDF</item>
        <item>MergeIntoPDF</item>
    </string-array>

    <string-array name="file_type_pdf">
        <item>PNG</item>
        <item>JPG</item>
        <item>WEBP</item>
    </string-array>

    <string-array name="file_type_all_pdf">
        <item>PNG</item>
        <item>JPG</item>
        <item>WEBP</item>
        <item>MergePDF</item>
    </string-array>

    <string-array name="pdf_image_quality">
        <item>72 PPI</item>
        <item>200 PPI</item>
        <item>300 PPI</item>
        <item>400 PPI</item>
    </string-array>

    <string-array name="pdf_quality">
        <item>72 PPI</item>
        <item>200 PPI</item>
    </string-array>

    <string-array name="text_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>