<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.yuwin.fileconverterpro.ConvertViewModel" />

    </data>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/convertNestedScrollView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.yuwin.fileconverterpro.ConvertFragment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imageQueue"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/layout_border"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/allerta"
                android:padding="4dp"
                android:text="@string/qualityText"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageQueue" />

            <SeekBar
                android:id="@+id/qualitySeekBar"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:max="100"
                android:progress="100"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView"
                app:layout_constraintVertical_bias="0.47000003" />

            <TextView
                android:id="@+id/qualityValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/allerta"
                android:hint="100"
                android:text="@{viewModel.qualityValue}"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="@+id/qualitySeekBar"
                app:layout_constraintStart_toEndOf="@+id/qualitySeekBar"
                app:layout_constraintTop_toTopOf="@+id/qualitySeekBar"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/fileQualityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/allerta"
                android:text="@string/file_quality"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <Button
                android:id="@+id/convertButton"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/allerta"
                android:text="@string/convertButtonText"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/paddingTextView" />


            <TextView
                android:id="@+id/pdfQualityDefaultText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:fontFamily="@font/allerta"
                android:text="@string/defaultQuality"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/fileQualityTextView"
                app:layout_constraintStart_toEndOf="@id/fileQualityTextView"
                app:layout_constraintTop_toTopOf="@id/fileQualityTextView" />

            <Spinner
                android:id="@+id/fileQualitySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:entries="@array/pdf_quality"
                android:spinnerMode="dialog"
                android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@+id/fileQualityTextView"
                app:layout_constraintTop_toBottomOf="@+id/qualitySeekBar" />

            <TextView
                android:id="@+id/paddingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/allerta"
                android:text="@string/padding_pdf_page"
                android:textSize="18dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/pdfPageSizeTextView"
                app:layout_constraintTop_toBottomOf="@+id/pdfPageSizeTextView" />

            <EditText
                android:id="@+id/paddingNumberEditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:inputType="number"
                android:text="@string/_50"
                android:textSize="18dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/paddingTextView"
                app:layout_constraintStart_toEndOf="@+id/paddingTextView"
                app:layout_constraintTop_toTopOf="@+id/paddingTextView"
                app:layout_constraintVertical_bias="0.708" />

            <TextView
                android:id="@+id/paddingPixelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:text="Px"
                android:textSize="18dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/paddingNumberEditText"
                app:layout_constraintStart_toEndOf="@+id/paddingNumberEditText"
                app:layout_constraintTop_toTopOf="@+id/paddingNumberEditText" />

            <TextView
                android:id="@+id/pdfPageSizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/allerta"
                android:text="Page Size :"
                android:textSize="18dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/fileQualityTextView"
                app:layout_constraintTop_toBottomOf="@+id/fileQualityTextView" />

            <Spinner
                android:id="@+id/pdfPageSizeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:entries="@array/pdfPageSize"
                android:spinnerMode="dialog"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/pdfPageSizeTextView"
                app:layout_constraintStart_toEndOf="@+id/pdfPageSizeTextView"
                app:layout_constraintTop_toTopOf="@+id/pdfPageSizeTextView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</layout>